68819566 -‘Search' button misaligned on the forum topic preview page creating alignment issues

--- a/docroot/sites/all/modules/custom/sbac_forum/css/sbac_forum.css
+++ b/docroot/sites/all/modules/custom/sbac_forum/css/sbac_forum.css
@@ -3606,9 +3606,47 @@ h2.title {
   margin-top: 7px;
 }
 
+/*Nav search box*/
+/* line 3173, ../sass/sbac_forum.scss */
+.search {
+  text-align: right;
+}
+/* line 3176, ../sass/sbac_forum.scss */
+.search .block-search {
+  margin-right: 1em;
+  position: relative;
+  vertical-align: top;
+  width: 200px;
+}
+/* line 3183, ../sass/sbac_forum.scss */
+.search .block-search .form-text,
+.search .block-search .form-text:focus {
+  background: url("../images/search.png") no-repeat scroll 5% center rgba(0, 0, 0, 0);
+  border-radius: 20px;
+  padding-left: 25px;
+  position: absolute;
+  top: 8px;
+}
+/* line 3191, ../sass/sbac_forum.scss */
+.search .block-search .sbac-clear-search {
+  background: url("../images/icon-validation-fail.png") no-repeat scroll center center rgba(0, 0, 0, 0);
+  cursor: pointer;
+  display: block;
+  float: right;
+  height: 15px;
+  position: absolute;
+  right: 13px;
+  top: 14px;
+  width: 15px;
+}
+/* line 3203, ../sass/sbac_forum.scss */
+.search .block-search button {
+  display: none !important;
+}
+
 /*Fixed for FF*/
 @-moz-document url-prefix() {
-  /* line 3174, ../sass/sbac_forum.scss */
+  /* line 3213, ../sass/sbac_forum.scss */
   .sbac-forum-vp-controls-popup:after {
     position: absolute;
     bottom: 30px;
@@ -3617,30 +3655,30 @@ h2.title {
 }
 
 /*Fix IE9 bugs*/
-/* line 3183, ../sass/sbac_forum.scss */
+/* line 3222, ../sass/sbac_forum.scss */
 .ie9 {
   /*Tooltip of Forum setting on Forum section*/
 }
-/* line 3186, ../sass/sbac_forum.scss */
+/* line 3225, ../sass/sbac_forum.scss */
 .ie9 .sbac-forum-topic-node-view-controls {
   width: 140px;
 }
-/* line 3191, ../sass/sbac_forum.scss */
+/* line 3230, ../sass/sbac_forum.scss */
 .ie9 .sbac-forum-topic-node-view-controls-wrapper ul {
   padding: 3px 0 5px !important;
   line-height: 1.4 !important;
 }
-/* line 3195, ../sass/sbac_forum.scss */
+/* line 3234, ../sass/sbac_forum.scss */
 .ie9 .sbac-forum-topic-node-view-controls-wrapper ul li {
   margin-bottom: 0 !important;
 }
-/* line 3200, ../sass/sbac_forum.scss */
+/* line 3239, ../sass/sbac_forum.scss */
 .ie9 .sbac-forum-topic-node-view-controls-wrapper a {
   font-size: 15px;
   line-height: 1;
   height: 20px;
 }
-/* line 3210, ../sass/sbac_forum.scss */
+/* line 3247, ../sass/sbac_forum.scss */
 .ie9 .button.comment-direct-reply-form-cancel-link,
 .ie9 .button.comment-reply-form-cancel-link {
   margin-top: 25px !important;
